<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/include_bottom_bar.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_bar_root"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_bar_height"
    android:background="@color/text_dark">

    <View
        android:id="@+id/black_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:background="#000000"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="@dimen/icon_size_32"
        android:layout_height="@dimen/icon_size_32"
        android:layout_marginStart="@dimen/padding_large"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_back"
        android:tint="@color/icon_white"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_home"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cd_home"
        android:src="@drawable/ic_ball"
        android:tint="@color/icon_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_settings"
        android:layout_width="@dimen/icon_size_32"
        android:layout_height="@dimen/icon_size_32"
        android:layout_marginEnd="@dimen/padding_large"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_settings"
        android:tint="@color/icon_white"
        android:src="@drawable/ic_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
